--- a/assets/view/kako-bistrot.html
+++ b/assets/view/kako-bistrot.html
@@ -137,7 +137,15 @@
                 </div>
             </div>
         </article>
-      
+        <article class="bistrot-crumbs">
+            <div class="crumb-title">
+                <h3>Nos autres expérience</h3>
+            </div>
+            <a href="/assets/view/kako-beach.html" class="crumb-links">
+                <h4>Gorge du Verdon</h4>
+                <p>Kako's Beach - location de bâteau éléctrique</p> 
+            </a>      
+        </article>
         
     </main>
     <footer>
@@ -162,7 +170,7 @@
                 <div class="col-footer two">
                     <div class="site-map-wrap">
                         <ul class="site-map">
-                            <li><a href="index.html">Accueil</a></li>
+                            <li><a href="/index.html">Accueil</a></li>
                             <li><a href="/assets/view/room.html">Chambres</a></li>
                             <li><a href="">Expérience</a></li>
                             <li><a href="">Moustier</a></li>
