--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 @import 'pages/preview';
 @import 'pages/gallery';
 @import 'pages/bistrot';
+@import 'pages/beach';
+
 @import 'components/card';
 @import 'components/button';
 @import 'components/carousel';
